Fixed template issue remained from r3736 in comment 42 of issue 878. The "Add.." link was followed by ususally two unnecessary new line containers. They are clean and instead the link is wrapped by a container with a new class ".addNew".

--- a/trunk/gbif-ipt/src/main/webapp/styles/main.css
+++ b/trunk/gbif-ipt/src/main/webapp/styles/main.css
@@ -612,6 +612,9 @@ div.right {
   margin-top: -15px;
 }
 
+/* Generic classis for metadata management */
+.addNew { margin-top:10px;font-size:0.92em; }
+
 /* Geospatial Coverage */
 #map{
 	width: 100%;
